erDiagram
  CLUBS ||--|| COMPETITION_SETTINGS : configures
  CLUBS ||--o{ COMPETITION_EVENTS : owns
  COMPETITION_EVENTS ||--o{ COMPETITION_DIVISIONS : contains
  COMPETITION_EVENTS ||--o{ COMPETITION_PARTICIPANTS : registers
  COMPETITION_DIVISIONS ||--o{ COMPETITION_PARTICIPANTS : groups

  COMPETITION_EVENTS ||--o{ COMPETITION_TEAMS : includes
  COMPETITION_TEAMS ||--o{ COMPETITION_TEAM_MEMBERS : includes
  USERS ||--o{ COMPETITION_TEAM_MEMBERS : joins

  COMPETITION_EVENTS ||--o{ MATCHES : schedules
  COMPETITION_DIVISIONS ||--o{ MATCHES : organizes
  MATCHES ||--o{ MATCH_PARTICIPANTS : includes
  USERS ||--o{ MATCH_PARTICIPANTS : plays
  COMPETITION_TEAMS ||--o{ MATCH_PARTICIPANTS : plays
  BOOKINGS ||--o{ MATCHES : reserves_court
  COURTS ||--o{ MATCHES : hosts
  MATCHES ||--o{ MATCH_RESULT_SUBMISSIONS : receives

  CLUBS ||--o{ LADDERS : owns
  LADDERS ||--o{ LADDER_ENTRIES : ranks
  USERS ||--o{ LADDER_ENTRIES : joins
  LADDERS ||--o{ LADDER_RANKING_HISTORY : records
  MATCHES ||--o{ LADDER_RANKING_HISTORY : causes

  LADDERS ||--o{ CHALLENGES : creates
  USERS ||--o{ CHALLENGES : challenger
  USERS ||--o{ CHALLENGES : opponent
  MATCHES ||--o{ CHALLENGES : completes

  COMPETITION_EVENTS ||--o{ STANDINGS_ROWS : tracks
  COMPETITION_DIVISIONS ||--o{ STANDINGS_ROWS : ranks
  COMPETITION_PARTICIPANTS ||--o{ STANDINGS_ROWS : summarized_by

